--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -6,4 +6,7 @@
     -->
 
 
+    <dimen name="largura_img_detalhe_parceiro">150dp</dimen>
+    <dimen name="altura_img_detalhe_parceiro">150dp</dimen>
+    <dimen name="largura_tabs">120dp</dimen>
 </resources>
