--- a/app/src/main/res/values-sw720dp-land/dimens.xml
+++ b/app/src/main/res/values-sw720dp-land/dimens.xml
@@ -5,6 +5,11 @@
          screen margins) for sw720dp devices (e.g. 10" tablets) in landscape here.
     -->
     <dimen name="activity_horizontal_margin">128dp</dimen>
+    <dimen name="largura_tile_parceiro">160dp</dimen>
+    <dimen name="raio_borda">12dp</dimen>
+    <dimen name="largura_img_detalhe_parceiro">200dp</dimen>
+    <dimen name="altura_img_detalhe_parceiro">200dp</dimen>
+    <dimen name="largura_tabs">120dp</dimen>
 
 
 </resources>
