--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -4,7 +4,11 @@
          Customize dimensions originally defined in res/values/dimens.xml (such as
          screen margins) for sw720dp devices (e.g. 10" tablets) in landscape here.
     -->
+    <dimen name="largura_tile_parceiro">150dp</dimen>
+    <dimen name="raio_borda">12dp</dimen>
+    <dimen name="largura_img_detalhe_parceiro">200dp</dimen>
+    <dimen name="altura_img_detalhe_parceiro">200dp</dimen>
+    <dimen name="largura_tabs">120dp</dimen>
 
- 
 
 </resources>
