--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="alturaBtPrincipal">120dip</dimen>
     <dimen name="larguraBtPrincipal">120dip</dimen>
     <dimen name="espacoInicial">200dip</dimen>
+    <dimen name="largura_img_detalhe_parceiro">200dp</dimen>
+    <dimen name="altura_img_detalhe_parceiro">200dp</dimen>
+    <dimen name="largura_tabs">120dp</dimen>
 </resources>
