--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,11 +18,14 @@
     <color name="texto_lista">#505050</color>
     <color name="texto_header">#FFFFFF</color>
     <color name="fundo_lista">#FFFFFF</color>
+    <color name="fundo_parceiro_lista">#FFFFFF</color>
     <color name="texto_lista_selecionado">#445963</color>
     <color name="fundo_lista_selecionado">#E0E0E0</color>
+    <color name="fundo_parceiro_lista_selecionado">#ed1e1e</color>
     <color name="barra_menu">#8C181C</color>
     <color name="botao_tab_apertado">#580e11</color>
     <color name="foreground">@android:color/white</color>
     <color name="fundoEscuro">#EEEEEE</color>
+    <color name="cor_sombra">#dcdcdc</color>
 
 </resources>
