--- a/app/src/main/res/drawable/fundo_sombra.xml
+++ b/app/src/main/res/drawable/fundo_sombra.xml
@@ -3,15 +3,22 @@
     <item >
         <shape
             android:shape="rectangle">
-            <solid android:color="@android:color/darker_gray" />
+            <solid android:color="@color/cor_sombra" />
+            <size android:width="130dp"></size>
+            <size android:height="160dp"></size>
             <corners android:radius="5dp"/>
         </shape>
     </item>
-    <item android:right="1dp" android:left="1dp" android:bottom="2dp">
+    <item android:right="2dp" android:left="0dp" android:bottom="3dp">
         <shape
             android:shape="rectangle">
             <solid android:color="@android:color/white"/>
+            <size android:width="130dp"></size>
+            <size android:height="160dp"></size>
             <corners android:radius="3dp"/>
         </shape>
     </item>
+
+
 </layer-list>
+
