--- a/app/src/main/res/layout/linha_item_parceiro.xml
+++ b/app/src/main/res/layout/linha_item_parceiro.xml
@@ -1,67 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="130dp"
+    android:layout_height="160dp"
     android:orientation="horizontal"
+
+
    >
-
-    <LinearLayout android:id="@+id/thumbnail"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="0dip"
-        android:layout_alignParentLeft="false"
-        android:background="@color/fundo_lista"
-        android:layout_centerHorizontal="true"
+<!--    android:background="@drawable/item_lista_parceiros"-->
+    <LinearLayout
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        >
-        <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+        android:layout_width="130dp"
+        android:layout_height="160dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/fundo_sombra"
+        android:layout_centerHorizontal="true">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/sem_imagem"
-            android:layout_gravity="center_horizontal" />
+        <LinearLayout android:id="@+id/thumbnail"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="0dip"
+            android:layout_alignParentLeft="false"
+            android:background="@android:color/white"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            >
+            <FrameLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
             <ImageView
-                android:src="@drawable/borda_arredondada"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/sem_imagem"
+                android:layout_gravity="center_horizontal" />
 
-        </FrameLayout>
-        <TextView
-            android:id="@+id/nomeParceiro"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Nome Parceiro"
-            android:textColor="#9a9a9a"
-            android:typeface="sans"
-            android:textSize="15dip"
-            android:textStyle="bold"
-            android:layout_below="@+id/thumbnail"
-            android:clickable="true"
-            android:layout_alignParentBottom="false"
-            android:layout_alignParentLeft="false"
-            android:layout_alignParentTop="false"
-            android:layout_alignWithParentIfMissing="false"
-            android:layout_centerHorizontal="true"
-            android:textAlignment="gravity"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_horizontal" />
+                <ImageView
+                    android:src="@drawable/borda_arredondada"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/idParceiro"
-            android:text="id"
-            android:visibility="gone" />
+            </FrameLayout>
+            <TextView
+                android:id="@+id/nomeParceiro"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Nome Parceiro"
+                android:textColor="#9a9a9a"
+                android:typeface="sans"
+                android:textSize="15dip"
+                android:textStyle="bold"
+                android:layout_below="@+id/thumbnail"
+                android:clickable="true"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_alignWithParentIfMissing="false"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal" />
 
-    </LinearLayout>
-
-
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/idParceiro"
+                android:text="id"
+                android:visibility="gone" />
+        </LinearLayout>
+ </LinearLayout>
 
 
 </RelativeLayout>
